--- a/todo/src/styles.css
+++ b/todo/src/styles.css
@@ -1,2 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 @import url(https://unpkg.com/bootstrap@4.1.1/dist/css/bootstrap.min.css)
+
+/* @import url(file:///C:/Users/Atikash%20Singh/Documents/GitHub/todoApplicationFrontend/todo/src/assets/css/bootstrap.css) */
