--- a/todo/src/app/todo/todo.component.css
+++ b/todo/src/app/todo/todo.component.css
@@ -1,3 +1,17 @@
 .ng-invalid:not(form) {
     border-left: 5px solid red ;
+ }
+ 
+input[type="checkbox"] {
+    width: 20px;
+    height: 20px;
+    vertical-align: middle;
 }
+label.checkbox {
+    vertical-align: middle;
+    line-height: 24px;
+    margin: 2px 0;
+    display: block;
+    height: 24px;
+}
+
